Fix navigation spacing when no menu

--- a/modules/asset/ui/src/scss/_navigation.scss
+++ b/modules/asset/ui/src/scss/_navigation.scss
@@ -15,7 +15,7 @@
     align-items: stretch;
   }
 
-  nav > *:nth-child(2) {
+  nav > *:nth-last-child(2) {
     flex-grow: 1;
   }
 
@@ -119,7 +119,7 @@
       grid-template-columns: 1fr auto 1fr;
     }
 
-    nav > *:nth-child(2) {
+    nav > *:nth-last-child(2) {
       flex-grow: initial;
     }
 
